# markertracker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  intrinsics.xml  kalman_filter.m  package.xml
cmake/: FindFreenect.cmake
include/: markertracker.hpp  renderer.hpp
models/: origin.dae  origin.mtl  sphere.dae
objects/: mask-simple.ply  mask.pcd
shader/: color.fragmentshader  color.vertexshader  color_simple.fragmentshader
src/: main.cpp  markertracker.cpp  renderer.cpp
